<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_denuncia"
            android:icon="@drawable/ic_denuncia"
            android:title="@string/menu_denuncia" />
        <item
            android:id="@+id/nav_mis_denuncias"
            android:icon="@drawable/ic_mis_denuncias"
            android:title="@string/menu_mis_denuncias" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_announcement"
            android:title="@string/ta_acerca_de" />
        <item
            android:id="@+id/nav_privacy"
            android:icon="@drawable/ic_action_list"
            android:title="@string/ta_aviso_de_privacidad" />
    </group>

</menu>
