<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    tools:context=".Activitys.DenunciaActivity"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:name=".PointsScreen"
    app:popupTheme="@style/AppTheme.PopupOverlay"
    android:background="@drawable/retina_display_1242x2208"
    >

    <include android:id="@+id/ActionBar"
        layout="@layout/action_bar"
        />

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:ignore="UselessParent"
    android:padding="8dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="16sp"
            >

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/selTipoGobierno"
                android:padding="8sp"
                android:background="@drawable/text_view_yuyu"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="(*) Tipo de Gobierno:"
                    android:paddingBottom="4sp"
                    tools:ignore="HardcodedText" />

                <Spinner
                    android:id="@+id/tipp_gobierno"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:maxLines="1"
                    android:singleLine="true"
                   />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/selMunicipios"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8sp"
                android:background="@drawable/text_view_yuyu"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Municipio:"
                    android:paddingBottom="4sp"
                    tools:ignore="HardcodedText" />

                <Spinner
                    android:id="@+id/municipios"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:singleLine="true"
                     />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/selDependencias"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8sp"
                android:background="@drawable/text_view_yuyu"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dependencia"
                    android:paddingBottom="4sp"
                    />

                <Spinner
                    android:id="@+id/dependencias"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:singleLine="true"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/selAreas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8sp"
                android:background="@drawable/text_view_yuyu"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/area"
                    android:paddingBottom="4sp"
                    />

                <Spinner
                    android:id="@+id/areas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:singleLine="true"
                    />


            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_denuncia_personal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="16sp"
            >

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_view_yuyu"
                >

                <EditText
                    android:id="@+id/apellido_paterno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/apellido_paterno"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:autofillHints="@string/apellido_paterno"
                    android:inputType="text"
                    tools:ignore="UnusedAttribute" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_view_yuyu"
                >

                <EditText
                    android:id="@+id/apellido_materno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/apellido_materno"
                    android:maxLines="1"
                    android:singleLine="true"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_view_yuyu"
                >

                <EditText
                    android:id="@+id/nombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nombre"
                    android:maxLines="1"
                    android:singleLine="true"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_view_yuyu"
                >

                <EditText
                    android:id="@+id/celular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/celular"
                    android:inputType="numberSigned"
                    android:maxLines="1"
                    android:singleLine="true"
                    />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_view_yuyu"
                >

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="16sp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/fecha"
                    android:layout_width="278dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/text_view_yuyu"
                    android:gravity="center_vertical"
                    android:paddingBottom="4sp"
                    android:text="@string/fecha"
                    tools:text="Haz click en el boton para seleccionar la fecha" />

                <Button
                    android:id="@+id/btnFecha"
                    android:layout_width="229dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4sp"
                    android:layout_weight="1"
                    android:text="@string/fecha"
                    android:layout_marginStart="4sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/hora"
                    android:layout_width="281dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/text_view_yuyu"
                    android:gravity="center_vertical"
                    android:paddingBottom="4sp"
                    android:text="@string/hora"
                    tools:text="Haz click en el boton para seleccionar la hora" />

                <Button
                    android:id="@+id/btnHora"
                    android:layout_width="229dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4sp"
                    android:layout_weight="1"
                    android:text="@string/hora"
                    android:layout_marginStart="4sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginBottom="16sp"
            >

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/text_view_yuyu"
                android:layout_marginBottom="8sp"
                >

                <EditText
                    android:id="@+id/lugarHechos"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="top|left"
                    android:hint="@string/d_nde_ocurrieron_los_hechos"
                    android:maxLines="10"
                    android:singleLine="false"
                    android:text=''
                    tools:text='' />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/text_view_yuyu"
                >

                <EditText
                    android:id="@+id/hechos"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="top|left"
                    android:hint="@string/escribe_tu_denuncia"
                    android:maxLines="30"
                    android:singleLine="false"
                    android:text=''
                    tools:text='' />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="16sp"
            android:background="@drawable/text_view_yuyu"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:paddingBottom="4sp"
                android:text="@string/archivo"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    >

                    <Button
                        android:id="@+id/btnImagen"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="16sp"
                        android:text="@string/opciones"
                        android:paddingEnd="16sp" />

                    <ImageView
                        android:id="@+id/imgArchivo"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:contentDescription="@string/imagen" />

                    <VideoView
                        android:id="@+id/vidArchivo"
                        android:layout_width="180dp"
                        android:layout_height="100dp"
                        android:layout_margin="4dp"
                        android:layout_marginLeft="4dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginRight="4dp"
                        android:layout_marginBottom="4dp" />


                </LinearLayout>

                <TextView
                    android:id="@+id/nombreArchivoSeleccionado"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:paddingBottom="4sp"
                    android:layout_gravity="center_vertical"
                    android:padding="8sp"
                    android:text=""

                    />


            </LinearLayout>

        </LinearLayout>


    <Button
                android:id="@+id/btnSendData"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorAccent"
                android:text="@string/enviar_denuncia"
                android:textColor="@color/colorBlanco"
                android:textStyle="bold" />


    </LinearLayout>

</ScrollView>
</LinearLayout>
